<resources>
    <string name="app_name">ZomatoAPIDemo</string>
    <string name="back_press_msg">Please click BACK again to exit</string>
    <string name="empty_text">No data found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="cost_for_two">Cost for two <b>%s</b> approx</string>
    <string name="restaurant_nearby">Restaurants Nearby</string>
    <string name="detectLocation">Detect Location</string>
    <string name="auto_detect_location">Auto detect current location</string>
    <string name="hint_city">Dadar</string>
    <string name="city_region">City/Region</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="location_tittle">Please turn on loaction to get your current city</string>
    <string name="location_required">Location Required !</string>
    <string name="try_again">Please try again</string>
    <string name="enter_location">Please enter your location</string>
    <string name="new_restaurant">New</string>
    <string name="please_turn_on_internet">Please turn on internet</string>
</resources>
